--- a/style.css
+++ b/style.css
@@ -3,19 +3,19 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-
+h1 {
+	font: bold 50px/1 "arial";
+	color: #000;
+}
 section {
 	width: 1000px;
 	height: 800px;
-	border: 1px solid black;
-	position: relative;
 }
 
 article {
-	width: 100px;
-	height: 100px;
+	width: 200px;
+	height: 200px;
 	background-color: aqua;
 	position: absolute;
 	top: 0px;
-	left: 0px;
 }
