가속도 설정

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ section {
 	/* width: 1000px; */
 	width: 1400px;
 	height: 800px;
-	border: 1px solid black;
+	/* border: 1px solid black; */
+	border: 1px solid #04b568;
 	position: relative;
 }
 
